# Switchyard

./: .gitattributes  .gitignore  .taurignore  CLAUDE.md  Cargo.toml  README.md  cargo  cargo.cmd  pyproject.toml  start-gui.bat  start-gui.ps1  switchyard.cmd  switchyard.toml
.github/workflows/: rust-windows.yml
crates/switchyard-app-providers/: Cargo.toml
crates/switchyard-app-providers/src/: lib.rs
crates/switchyard-artifacts/: Cargo.toml
crates/switchyard-artifacts/src/: lib.rs  raw_archive.rs
crates/switchyard-cli/: Cargo.toml
crates/switchyard-cli/src/: host.rs  host_hook.rs  lib.rs  main.rs  store_cmd.rs
crates/switchyard-cli/tests/: host_bridge.rs  host_cli_regression.rs  store_cli.rs
crates/switchyard-config/: Cargo.toml
crates/switchyard-config/src/: error.rs  lib.rs
crates/switchyard-context/: Cargo.toml
crates/switchyard-context/src/: lib.rs
crates/switchyard-core/: Cargo.toml
crates/switchyard-core/src/: error.rs  event_mapper.rs  fake_provider.rs  instance.rs  ipc.rs  lib.rs  policy.rs  proxy.rs  registry.rs  router.rs  runtime_events.rs  turn_runner.rs
crates/switchyard-core/tests/: integration_e2e.rs  orchestration_e2e.rs  runtime_completion.rs  runtime_observable.rs
crates/switchyard-gui/: .gitignore  .taurignore  Cargo.toml  DIFF_TEST.md  package.json  switchyard.toml  tauri.conf.json
crates/switchyard-gui/capabilities/: default.json
crates/switchyard-gui/frontend/: package-lock.json  package.json
crates/switchyard-gui/frontend/src/: App.tsx  index.css  providerCliCapabilities.ts  types.ts
crates/switchyard-gui/frontend/src/components/: AppTopBar.tsx  ArtifactDrawer.tsx  Canvas.tsx  ChatArea.tsx  ControlCenter.tsx  FilesTree.tsx  IconRail.tsx  SearchPanel.tsx  SettingsModal.tsx  Sidebar.tsx  SourceControl.tsx  StatusBar.tsx  TerminalPanel.tsx  TopologyOverlay.tsx  WelcomeWorkspace.tsx  WorkspaceHeader.tsx  batchMode.ts  canvasApi.ts  codeMirrorLanguages.ts  fileIcons.tsx  slashCommands.ts
crates/switchyard-gui/frontend/src/components/ui/: ContextMenu.tsx  RenderHelpers.tsx  ToolCard.tsx  TopologyGraph.tsx  VirtualizedDiffBlock.tsx
crates/switchyard-gui/frontend/src/services/: api.ts
crates/switchyard-gui/frontend/src/utils/: attachments.ts  turnMerge.test.mjs  turnMerge.ts
crates/switchyard-gui/frontend/src/workers/: diffWorker.ts  inlineDiffWorker.ts
crates/switchyard-gui/icons/: icon.icns
crates/switchyard-gui/src/: file_watcher.rs  git.rs  main.rs  pty.rs
crates/switchyard-gui/stress_results_probe/: events.jsonl
crates/switchyard-host-jobs/: Cargo.toml
crates/switchyard-host-jobs/src/: lib.rs
crates/switchyard-orchestrator/: Cargo.toml
crates/switchyard-orchestrator/src/: error.rs  lib.rs  supervisor.rs
crates/switchyard-provider-antigravity/: Cargo.toml
crates/switchyard-provider-antigravity/src/: lib.rs  probe.rs  turn.rs
crates/switchyard-provider-api/: Cargo.toml
crates/switchyard-provider-api/src/: capability.rs  delegate.rs  error.rs  event.rs  host_surface.rs  identity.rs  lib.rs  peer.rs  pool.rs  provider.rs  role.rs  sentinel.rs  types.rs
crates/switchyard-provider-claude/: Cargo.toml
crates/switchyard-provider-claude/examples/: persistent_spike.rs
crates/switchyard-provider-claude/src/: lib.rs  live.rs  probe.rs  stream_json.rs  turn.rs
crates/switchyard-provider-claude/tests/: live_smoke.rs
crates/switchyard-provider-codex/: Cargo.toml
crates/switchyard-provider-codex/examples/: app_server_spike.rs
crates/switchyard-provider-codex/src/: app_server.rs  lib.rs  probe.rs  turn.rs
crates/switchyard-provider-codex/tests/: live_smoke.rs
crates/switchyard-provider-gemini/: Cargo.toml
crates/switchyard-provider-gemini/src/: lib.rs  probe.rs  turn.rs
crates/switchyard-provider-gemini/tests/: live_smoke.rs
crates/switchyard-provider-kohaku/: Cargo.toml
crates/switchyard-provider-kohaku/src/: jsonl.rs  lib.rs  probe.rs  turn.rs
crates/switchyard-provider-subprocess/: Cargo.toml
crates/switchyard-provider-subprocess/src/: context_render.rs  helpers.rs  lib.rs  live.rs  probe.rs  resolve.rs  runner.rs
crates/switchyard-runtime/: Cargo.toml
crates/switchyard-runtime/src/: error.rs  ipc.rs  lib.rs  protocol.rs  schema.rs  store.rs
crates/switchyard-session/: Cargo.toml
crates/switchyard-session/src/: artifact.rs  event.rs  inbox.rs  lib.rs  session.rs  turn.rs  workspace.rs
crates/switchyard-session/tests/: serialization.rs
crates/switchyard-store/: Cargo.toml
crates/switchyard-store/src/: error.rs  jsonl.rs  lib.rs  sqlite.rs  workspace_index.rs
crates/switchyard-text/: Cargo.toml
crates/switchyard-text/src/: lib.rs
crates/switchyard-tui/: Cargo.toml
crates/switchyard-tui/src/: app.rs  hyard_jobs.rs  launch.rs  lib.rs  main.rs  state.rs  terminal_buffer.rs
host-packs/claude/: README.md  hyard-skill.md
host-packs/claude/native/: README.md  manifest.yaml
host-packs/codex/: AGENTS.md  README.md
host-packs/codex/skills/hyard/: SKILL.md
host-packs/gemini/: README.md  hyard-skill.md
host-packs/gemini/extension/: README.md  manifest.yaml
scripts/: install-hyard-claude.ps1  install-hyard-codex.ps1  install-hyard-gemini.ps1  lib-hyard-install.ps1  smoke-hyard-delegate-scenarios.ps1  smoke-hyard-host.ps1  smoke-hyard-matrix.ps1  smoke-routed-delegate.ps1  tui_live_smoke_codex.ps1  uninstall-hyard-claude.ps1  uninstall-hyard-codex.ps1  uninstall-hyard-gemini.ps1
templates/: AGENTS.md  CLAUDE.md  GEMINI.md  HYARD_USAGE.md
tests/: Cargo.toml
tests/tests/: claude_live_smoke.rs  cli_host_bridge.rs  cli_host_regression.rs  cli_store_cli.rs  cli_tui_cli.rs  codex_live_smoke.rs  gemini_live_smoke.rs  integration_e2e.rs  kohaku_integration.rs  kohaku_live_smoke.rs  orchestration_e2e.rs  provider_api_roundtrip.rs  runtime_completion.rs  runtime_observable.rs  session_serialization.rs  tui_cli_tests.rs
tools/: __init__.py  validate_ci_config.py
