[package]
name = "switchyard-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "switchyard_cli"
path = "src/lib.rs"

[[bin]]
name = "switchyard"
path = "src/main.rs"

[dependencies]
switchyard-config = { workspace = true }
switchyard-core = { workspace = true }
switchyard-host-jobs = { workspace = true }
switchyard-session = { workspace = true }
switchyard-store = { workspace = true }
switchyard-provider-api = { workspace = true }
switchyard-provider-codex = { workspace = true }
switchyard-provider-claude = { workspace = true }
switchyard-provider-gemini = { workspace = true }
switchyard-provider-antigravity = { workspace = true }
switchyard-provider-subprocess = { workspace = true }
switchyard-tui = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = { workspace = true }
