[package]
name = "switchyard-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
switchyard-config = { workspace = true }
switchyard-core = { workspace = true }
switchyard-orchestrator = { workspace = true }
switchyard-session = { workspace = true }
switchyard-store = { workspace = true }
switchyard-provider-api = { workspace = true }
switchyard-provider-codex = { workspace = true }
switchyard-provider-claude = { workspace = true }
switchyard-provider-gemini = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
