[package]
name = "switchyard-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
switchyard-config = { workspace = true }
switchyard-core = { workspace = true }
switchyard-orchestrator = { workspace = true }
switchyard-runtime = { workspace = true }
switchyard-session = { workspace = true }
switchyard-store = { workspace = true }
switchyard-provider-api = { workspace = true }
switchyard-provider-codex = { workspace = true }
switchyard-provider-claude = { workspace = true }
switchyard-provider-gemini = { workspace = true }
switchyard-provider-antigravity = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
notify = "6"
portable-pty = { workspace = true }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dev-dependencies]
tempfile = { workspace = true }
filetime = "0.2"
