[package]
name = "switchyard-host-jobs"
version.workspace = true
edition.workspace = true

[dependencies]
switchyard-provider-api = { workspace = true }
switchyard-text = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = { workspace = true }
