[package]
name = "switchyard-provider-subprocess"
version.workspace = true
edition.workspace = true

[dependencies]
switchyard-provider-api = { workspace = true }
switchyard-text = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
portable-pty = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
